--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,8 +1,16 @@
+body {
+  margin: 0;
+}
+
 #root {
-  max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+}
+
+header {
+  background-color: #808080;
+  height: 2rem;
+  display: flex;
+  align-items: center;
 }
 
 .logo {
